--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -62,6 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="企业"
+                android:visibility="gone"
                 android:textSize="@dimen/textsize"
                 android:id="@+id/textView17" />
         </LinearLayout>
@@ -119,6 +120,7 @@
             android:layout_marginLeft="20px"
             android:layout_marginRight="20px"
             android:layout_marginTop="20px"
+            android:visibility="gone"
             android:background="@color/white">
 
             <TextView
@@ -178,6 +180,7 @@
             android:layout_marginLeft="20px"
             android:layout_marginRight="20px"
             android:layout_marginTop="20px"
+            android:visibility="gone"
             android:background="@color/white">
 
             <TextView
@@ -236,6 +239,7 @@
             android:layout_marginLeft="20px"
             android:layout_marginRight="20px"
             android:layout_marginTop="20px"
+            android:visibility="gone"
             android:background="@color/white">
 
             <TextView
