--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -150,7 +150,7 @@
                     android:text="@string/forgetpassword"
                     android:textSize="@dimen/textsize"
                     android:layout_gravity="center"
-                    android:id="@+id/textView3" />
+                    android:id="@+id/textViewForgot" />
             </LinearLayout>
 
             <ImageView
